# yttui

./: .gitignore  Cargo.toml  LICENSE  README.md  roadmap.md
docs/: demo.tape
src/: app.rs  cli.rs  config.rs  dispatcher.rs  lib.rs  main.rs  palette.rs  player.rs  preflight.rs  search.rs  signal.rs  tui.rs
tests/: cli_smoke.rs  live_search.rs
tests/fixtures/: search_live_streams.json  search_no_results.json  search_rust_ratatui.json  search_unicode.json
