[package]
name = "yttui"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Justin Benge <jbenge1@arizona.edu>"]
description = "Keyboard-driven YouTube TUI: search via yt-dlp, play via mpv."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jbenge1/yttui"
keywords = ["youtube", "tui", "ratatui", "yt-dlp", "mpv"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
command-group = "5"
log = "0.4"
simplelog = "0.12"
dirs = "6"
which = "8"
ratatui = "0.30"
crossterm = "0.29"
unicode-width = "0.2"
clap = { version = "4", features = ["derive"] }
signal-hook = "0.3"

[target.'cfg(unix)'.dependencies]
# Direct dep so we can use `killpg` from the signal watcher without
# fork+exec'ing `/bin/kill`. Already transitively pulled by
# `command-group`; pinning the same major as that crate so we don't
# duplicate it in the lockfile.
nix = { version = "0.27", default-features = false, features = ["signal"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
unwrap_used = "deny"
# `cargo` group: kept off because it warns about dual-version transitive
# crates (e.g. `thiserror 1` pulled in by ratatui's optional termwiz
# feature, which we don't compile). See SecondOpinion.md F11 for rationale.
