[package]
name = "yttui"
version = "0.1.3"
edition = "2024"
rust-version = "1.88"
authors = ["Justin Benge <jbenge1@arizona.edu>"]
description = "Keyboard-driven YouTube TUI: search via yt-dlp, play via mpv."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jbenge1/yttui"
keywords = ["youtube", "tui", "ratatui", "yt-dlp", "mpv"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# A1.1: parse `$XDG_CONFIG_HOME/yttui/config.toml`. Roadmap names TOML
# explicitly. We drop `display` (write-back is not on the V0.2 roadmap)
# but keep `std` so `toml::de::Error` implements `std::error::Error`
# for `thiserror`'s `#[source]`.
toml = { version = "0.9", default-features = false, features = ["parse", "serde", "std"] }
thiserror = "2"
command-group = "5"
log = "0.4"
simplelog = "0.12"
dirs = "6"
which = "8"
ratatui = "0.30"
crossterm = "0.29"
unicode-width = "0.2"
clap = { version = "4", features = ["derive"] }
signal-hook = "0.3"

[target.'cfg(unix)'.dependencies]
# Direct dep so we can use `killpg` from the signal watcher without
# fork+exec'ing `/bin/kill`. Already transitively pulled by
# `command-group`; pinning the same major as that crate so we don't
# duplicate it in the lockfile.
nix = { version = "0.27", default-features = false, features = ["signal"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
unwrap_used = "deny"
# `cargo` group: kept off because it warns about dual-version transitive
# crates that are present in `Cargo.lock` but not in the compile graph.
# Specifically (verified via `cargo tree --target all` for the default
# feature set, on host targets, on 2026-05-08):
#   - `thiserror 1` is reachable only via `ratatui-termwiz` (an optional
#     ratatui backend the project does not enable). The compile graph
#     resolves to `thiserror 2`.
#   - `bitflags 1` likewise enters the lockfile via unenabled optional
#     edges; the compile graph uses `bitflags 2` only.
#   - `getrandom` ships three versions in the lockfile (0.2, 0.3, 0.4);
#     only 0.2 (via `dirs → dirs-sys → redox_users`) is in the compile
#     graph. 0.3/0.4 are pulled by unenabled `ratatui-termwiz` /
#     `phf` edges.
#   - `nix 0.29` is pulled transitively via `ratatui-termwiz`; we pin
#     our direct dep to `nix 0.27` (same major as `command-group`'s
#     transitive use) so the compile graph has a single resolved
#     version.
#   - `winnow` ships two versions in the lockfile (0.7 and 1.0): both
#     come from `toml 0.9`, which is mid-migration to `winnow 1.0`
#     (its `toml_parser` sub-crate is on 1.0 while the top-level
#     crate still pulls 0.7). Both are reachable from the binary.
#     Tested 2026-05-09: pinning to `toml 0.8` removes this duplicate
#     but introduces a `hashbrown 0.16/0.17` duplicate (via the
#     `toml_edit`/`indexmap` chain) and pulls in the heavier
#     edit-tree parser instead of the streaming one we use, so it's
#     a net regression. Will resolve when toml finishes the winnow
#     migration upstream. Tracked under #87.
# Closing the lockfile gap entirely would require either a
# `cargo-deny.toml` skip-list or `default-features = false` on
# `ratatui` with explicit feature opt-in. Tracked as #77; deferred
# until V2 (no production impact — the duplicates do not compile).
